--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "aiohttp_responses"
-version = "0.1.0"
+version = "0.2.0"
 description = "proper aiohttp_responses lib"
 authors = ["indico <engineering@indicodata.ai>"]
 packages = [ {include = "aiohttp_responses"}]
@@ -16,6 +16,8 @@ pytest = {version = "^6.2.4"}
 black = {version = "^22.3.0", allow-prereleases = true}
 isort = {version = "^5.10.1", allow-prereleases = true}
 ipdb = {version = "^0.13.9", allow-prereleases = true}
+typing_extensions = { version = "^4.1", python = "^3.7" }
+
 pytest-asyncio = "^0.18.3"
 flake8 = "^4.0.1"
 
