--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,14 @@ testpaths = [
     "tests"
 ]
 
+[tool.semantic_release]
+version_variable = ["aiohttp_responses/__init__.py:__version__"]
+version_toml = ["pyproject.toml:tool.poetry.version"]
+branch = "development"
+upload_to_respository=true
+repository_url="https://push.fury.io/indico"
+build_command="poetry build"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
