--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aiohttp_responses"
+name = "indicodata-aiohttp_responses"
 version = "0.2.2"
 description = "proper aiohttp_responses lib"
 authors = ["indico <engineering@indicodata.ai>"]
