--- a/.drone.yml
+++ b/.drone.yml
@@ -31,10 +31,10 @@ steps:
       REPOSITORY_USERNAME:
         from_secret: GEMFURY_TOKEN
     commands:
-      - "semantic-release publish -D commit_subject='{version} [CI SKIP]'"
+      - semantic-release publish -D commit_subject="{version} [CI SKIP]"
     when:
       branch:
-        - development
+        - main
 
   # if on a feature branch do a prerelease
   - name: prerelease
