--- a/.drone.yml
+++ b/.drone.yml
@@ -4,8 +4,10 @@ name: publish
 
 trigger:
   event:
-    - push
-
+    include:
+      - push
+    exclude:
+      - pull_request
 image_pull_secrets:
   - DOCKER_CONFIG_JSON
 
