--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["indico <engineering@indicodata.ai>"]
 packages = [ {include = "aiohttp_responses"}]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-aiohttp = "^3.8.1"
-pytest = {version = "^6.2.4"}
+python = ">=3.7"
+aiohttp = ">=3.8.1"
+pytest = ">=6.2.4"
 
 [tool.poetry.dev-dependencies]
-pytest-asyncio = "^0.18.3"
+pytest-asyncio = ">=0.18.3"
 typing_extensions = { version = "^4.1", python = "^3.7" }
 black = {version = "^22.3.0", allow-prereleases = true}
 isort = {version = "^5.10.1", allow-prereleases = true}
