--- a/.harness/pipeline.yaml
+++ b/.harness/pipeline.yaml
@@ -37,6 +37,15 @@ pipeline:
                       - name: black
                         type: String
                         value: black --check aiohttp_responses tests
+                      - name: ruff
+                        type: String
+                        value: <+input>
+                      - name: mypy
+                        type: String
+                        value: <+input>
+                      - name: pylint
+                        type: String
+                        value: <+input>
             - stage:
                 identifier: build_containers
                 type: CI
@@ -78,22 +87,6 @@ pipeline:
             - stage:
                 identifier: snyk_tests
                 type: CI
-                spec:
-                  execution:
-                    steps:
-                      - parallel:
-                          - step:
-                              identifier: snyk_open_source
-                              type: Snyk
-                              spec:
-                                advanced:
-                                  fail_on_severity: critical
-                      - step:
-                          identifier: parse_code
-                          type: Snyk
-                          spec:
-                            advanced:
-                              fail_on_severity: critical
                 variables:
                   - name: RUN_SNYK
                     type: String
